<resources>
    <string name="app_name">My Pesoe Sense</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rem_date">Sample Date</string>
    <string name="rem_type">Sample type</string>
    <string name="rem_content">Sample Content</string>

    <string name="fab">+</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_delete">Delete</string>
    <string name="add_new_item_title">ADD NEW ITEM</string>
    <string name="btn_add_new_item">+ ADD</string>
    <string name="lbl_date">Date</string>
    <string name="txt_date">Edit date...</string>
    <string name="lbl_title">Title</string>
    <string name="txt_title">Edit title...</string>
    <string name="txt_message">Edit message...</string>
    <string name="btn_update_item">UPDATE</string>
    <string name="update_item_title">Update Remittance Details</string>
    <string name="send_to">Send to:</string>
    <string name="transfer_amount">Transfer Amount:</string>
    <string name="transaction_limit">Transaction limit: 2999.00 USD</string>
    <string name="account_number">Account Number:</string>
    <string name="save_biller">Save biller in my contacts</string>
    <string name="btn_confirm_payment">Confirm Payment</string>
    <string name="lbl_message">Message</string>
    <string name="lbl_login_email">or with Email</string>


    <!-- CDATA Strings -->
    <string name="ht_lbl_login_email">
        <![CDATA[
            or with
            <b>Email</b>
        ]]>
    </string>
    <string name="title_activity_product_upload">ProductUploadActivity</string>
    <string name="title_activity_sign_up_more">SignUpMoreActivity</string>
    <string name="title_activity_sign_up_more2">SignUpMore2</string>

</resources>
