<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="#e2e2e2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_item_title"
            android:textStyle="bold"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_date"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/txt_udate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_date"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_title"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/txt_utitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_title"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_message"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/txt_umessage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_message"
                android:singleLine="false"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#63C0EC"
        android:textColor="#fff"
        android:text="@string/btn_update_item"/>


</LinearLayout>